# iiif-manga-viewer-frontend

./: .gitignore  Cargo.toml  LICENSE  build.sh  index.html
css/: style.css  style.css.map  style.scss  viewer.css  viewer.css.map  viewer.scss
src/: IIIFMangaViewer.js  collection.rs  curation.rs  iiif_manifest.rs  lib.rs  search.rs  view.rs  viewer.rs
src/js/: IIIFMangaViewer.js  canvas2image.js
test/: hokusai.json  hokusai2.json
